compiler/testdata/errors/unreachable_code.lua


local function f()
	return "f"
	print("test")
end
